# GingerGig

./: .gitignore  CLAUDE.md  MULTI-CLOUD-ARCHITECTURE.md  PROJECT-OVERVIEW.md  README.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
backend/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  db.py  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_listing_demo_match_fields.py  0003_voice_session_batch_correlation.py
backend/app/: main.py
backend/app/core/: config.py  enums.py  errors.py  ids.py  security.py
backend/app/db/: session.py
backend/app/integrations/: s3_audio.py  transcribe_batch.py  transcribe_streaming.py
backend/app/models/: __init__.py  _mixins.py  booking.py  companion_alert.py  companion_alert_preference.py  companion_link.py  kyc_session.py  listing.py  review.py  timeline_event.py  user.py  voice_session.py
backend/app/routers/: auth.py  companion.py  elder.py  health.py  kyc.py  requestor.py  voice.py
backend/app/schemas/: auth.py  common.py  persona.py  voice.py
backend/app/services/: persona_queries.py  qwen_service.py  voice_service.py
backend/docs/: APSARADB_PROVISIONING.md  DEPLOYMENT_AWS.md
backend/scripts/: seed.py  seed_data.py
backend/tests/: conftest.py  test_auth_demo.py  test_auth_dependencies.py  test_auth_settings.py  test_cors_no_wildcard.py  test_dep_pins.py  test_error_envelope.py  test_health.py  test_kyc_local.py  test_migrations.py  test_no_create_all.py  test_no_forbidden_imports.py  test_persona_companion.py  test_persona_elder.py  test_persona_locale_and_authz.py  test_persona_requestor.py  test_seed.py  test_seed_refused_without_env.py  test_voice_batch.py  test_voice_contract.py  test_voice_qwen.py  test_voice_streaming.py
frontend/: .env.example  .env.production  eslint.config.js  index.html  package.json  (+4 more)
(+153 files in other folders)
